<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Quiz App</string>

    <!-- Quiz header -->
    <string name="quiz_header">French Quiz</string>

    <!-- Section 1 Headers -->
    <string name="section_1_header">Section 1</string>
    <string name="section_1_subheader">Select all possible answers (2 pt each)</string>

    <!-- Question 1 -->
    <string name="question_1">1. How do you say \"Give me my book\"?</string>

    <!-- Question 1 choices -->
    <string name="question_1_choice_1">Donnez-moi ma livre</string>
    <string name="question_1_choice_2">Donne-moi mon cerveau</string>
    <string name="question_1_choice_3">Donnez-moi mon livre</string>
    <string name="question_1_choice_4">Donne-moi mon livre</string>

    <!-- Question 2 -->
    <string name="question_2">2. How do you say \"Yesterday, I arrived\"?</string>

    <!-- Question 2 choices -->
    <string name="question_2_choice_1">Hier, je suis arrivé</string>
    <string name="question_2_choice_2">Demain, je suis arrivé</string>
    <string name="question_2_choice_3">Demain, je suis arrivée</string>
    <string name="question_2_choice_4">Hier, je suis arrivée</string>

    <!-- Section 2 Headers -->
    <string name="section_2_header">Section 2</string>
    <string name="section_2_subheader">Choose the correct answer (1 pt each)</string>

    <!-- Question 3 -->
    <string name="question_3">3. Translate \"A car\" into French</string>

    <!-- Question 3 choices -->
    <string name="question_3_choice_1">Une ceinture</string>
    <string name="question_3_choice_2">Une voiture</string>
    <string name="question_3_choice_3">Une peinture</string>
    <string name="question_3_choice_4">Une coiffure</string>

    <!-- Question 4 -->
    <string name="question_4">4. How do you say \"The bottle\" in French</string>

    <!-- Question 4 choices -->
    <string name="question_4_choice_1">La bouteille</string>
    <string name="question_4_choice_2">La glace</string>
    <string name="question_4_choice_3">Le verre</string>
    <string name="question_4_choice_4">le pied</string>

    <!-- Section 3 Headers -->
    <string name="section_3_header">Section 3</string>
    <string name="section_3_subheader">Complete the sentences (2 pt each)</string>

    <!-- Question 5 -->
    <string name="question_5_start">5. Je</string>
    <string name="question_5_end">te voir.</string>

    <!-- Answers for question 5 -->
    <string name="question_5_answer">veux</string>
    <string name="question_6_answer">chez</string>

    <!-- Question 6 -->
    <string name="question_6_start">6. Tu n\'es jamais là quand je vais</string>
    <string name="question_6_end">toi.</string>

    <!-- Submit Button -->
    <string name="submit_button">Submit</string>


    <!-- Toast message -->
    <string name="result_message">You got <xliff:g id="result_message" example="10">%s</xliff:g>/10 on the quiz</string>

</resources>

