<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Quiz header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/quiz_header"
            android:textSize="28sp" />

        <!-- Section 1 multiple possible answers -->
        <TextView
            style="@style/CustomHeader"
            android:text="@string/section_1_header" />

        <TextView
            style="@style/CustomSubHeader"
            android:text="@string/section_1_subheader" />

        <!-- Question 1 -->
        <TextView
            style="@style/QuestionText"
            android:text="@string/question_1" />

        <CheckBox
            android:id="@+id/question_1_choice_1"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_1_choice_1" />

        <CheckBox
            android:id="@+id/question_1_choice_2"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_1_choice_2" />

        <CheckBox
            android:id="@+id/question_1_choice_3"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_1_choice_3" />

        <CheckBox
            android:id="@+id/question_1_choice_4"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_1_choice_4" />

        <!-- Question 2 -->
        <TextView
            style="@style/QuestionText"
            android:text="@string/question_2" />

        <CheckBox
            android:id="@+id/question_2_choice_1"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_2_choice_1" />

        <CheckBox
            android:id="@+id/question_2_choice_2"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_2_choice_2" />

        <CheckBox
            android:id="@+id/question_2_choice_3"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_2_choice_3" />

        <CheckBox
            android:id="@+id/question_2_choice_4"
            style="@style/MultiplePossibleChoice"
            android:text="@string/question_2_choice_4" />
        <!-- End Section 1 -->

        <!-- Section 2: Multiple Choice -->
        <TextView
            style="@style/CustomHeader"
            android:text="@string/section_2_header" />

        <TextView
            style="@style/CustomSubHeader"
            android:text="@string/section_2_subheader" />

        <!-- Question 3 -->
        <TextView
            style="@style/QuestionText"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_3_choice_1"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_3_choice_1" />

            <RadioButton
                android:id="@+id/question_3_choice_2"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_3_choice_2" />

            <RadioButton
                android:id="@+id/question_3_choice_3"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_3_choice_3" />

            <RadioButton
                android:id="@+id/question_3_choice_4"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_3_choice_4" />
        </RadioGroup>

        <!-- Question 4 -->
        <TextView
            style="@style/QuestionText"
            android:text="@string/question_4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_4_choice_1"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_4_choice_1" />

            <RadioButton
                android:id="@+id/question_4_choice_2"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_4_choice_2" />

            <RadioButton
                android:id="@+id/question_4_choice_3"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_4_choice_3" />

            <RadioButton
                android:id="@+id/question_4_choice_4"
                style="@style/MultiplePossibleChoice"
                android:text="@string/question_4_choice_4" />
        </RadioGroup>

        <!-- Section 3 -->
        <TextView
            style="@style/CustomHeader"
            android:text="@string/section_3_header" />

        <TextView
            style="@style/CustomSubHeader"
            android:text="@string/section_3_subheader" />

        <!-- Question 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_5_start" />

            <EditText
                android:id="@+id/question_5_edit_text"
                style="@style/FillInTheBlank" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_5_end" />

        </LinearLayout>

        <!-- Question 6 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/InlineQuestionText"
                android:layout_gravity="bottom"
                android:text="@string/question_6_start" />

            <EditText
                android:id="@+id/question_6_edit_text"
                style="@style/FillInTheBlank" />

            <TextView
                style="@style/InlineQuestionText"
                android:layout_gravity="bottom"
                android:text="@string/question_6_end" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitQuiz"
            android:text="@string/submit_button" />
    </LinearLayout>
</ScrollView>
